--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,9 +10,9 @@
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/profile" *ngIf="auth.loggedIn">asd</a>
+        <a class="nav-link" routerLink="/profile" *ngIf="auth.loggedIn">My Profile</a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" *ngIf="auth.loggedIn">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Admin control
