--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,10 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/profile" *ngIf="auth.loggedIn">My Profile</a>
       </li>
-      <li class="nav-item dropdown" *ngIf="auth.loggedIn">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/advertisement" *ngIf="auth.loggedIn">My Profile</a>
+      </li>
+      <li class="nav-item dropdown" *ngIf="auth.loggedIn && auth.role === 'admin'">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Admin control
