--- a/src/app/administrator/create-sections/create-sections.component.html
+++ b/src/app/administrator/create-sections/create-sections.component.html
@@ -1,23 +1,26 @@
-<h3>Create Section</h3>
-<div [hidden]="submitted" style="width: 400px;">
+<div style="background-color: lightgray">
+  <h3>Create Section</h3>
+  <div [hidden]="submitted" style="width: 400px;">
     <form (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label for="name">Title of section</label>
-            <input type="text" class="form-control" id="title" required [(ngModel)]="section.title" name="title">
-        </div>
+      <div class="form-group">
+        <label for="name">Title of section</label>
+        <input type="text" class="form-control" id="title" required [(ngModel)]="section.title" name="title">
+      </div>
 
-        <div class="form-group">
-            <label for="name">Description of section</label>
-            <input type="text" class="form-control" id="description" required [(ngModel)]="section.description" name="description">
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
+      <div class="form-group">
+        <label for="name">Description of section</label>
+        <input type="text" class="form-control" id="description" required [(ngModel)]="section.description"
+          name="description">
+      </div>
+      <button type="submit" class="btn btn-success">Submit</button>
     </form>
-</div>
+  </div>
 
-<div [hidden]="!submitted">
+  <div [hidden]="!submitted">
     <h4>You submitted successfully!</h4>
-</div>
+  </div>
 
-<div *ngIf="errorStatus">
+  <div *ngIf="errorStatus">
     <h4>{{errorMessage}}</h4>
+  </div>
 </div>
