--- a/src/app/authenticated/profile/profile.component.html
+++ b/src/app/authenticated/profile/profile.component.html
@@ -51,9 +51,8 @@
         </div>
       </div>
     </div>
-    <div class="card-footer pb-0 pt-3">
+    <div class="card-footer d-flex justify-content-center pb-0 pt-3">
       <jw-pagination [items]="adverts" (changePage)="onChangePage($event)"></jw-pagination>
     </div>
   </div>
-
 </div>
