--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="/profile" *ngIf="auth.loggedIn">My Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/advertisement" *ngIf="auth.loggedIn">My Profile</a>
+        <a class="nav-link" routerLink="/advertisement" *ngIf="auth.loggedIn">Add New Advert</a>
       </li>
       <li class="nav-item dropdown" *ngIf="auth.loggedIn && auth.role === 'admin'">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
