--- a/src/app/authenticated/advertisement/advertisement.component.html
+++ b/src/app/authenticated/advertisement/advertisement.component.html
@@ -15,6 +15,7 @@
       <div class="col-md-6 py-2">
         <div [hidden]="!submitted">
           <h4>You submitted successfully!</h4>
+          <button class="btn btn-outline-primary" (click)="submitted=false">Back</button>
         </div>
 
 
@@ -39,18 +40,22 @@
             <div class="form-group">
               <label for="pricePerUnit">Cena po času:</label>
               <input type="number" class="form-control" id="pricePerUnit" required [(ngModel)]="advert.pricePerUnit"
-                name="pricePerUnit" placeholder="Navedite cenu u dinarima">
+                name="pricePerUnit"
+                oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
+                placeholder="Navedite cenu u dinarima">
             </div>
             <div class="form-group">
               <label for="unitOfMeasure">Trajanje časa:</label>
               <input type="number" class="form-control" id="unitOfMeasure" required [(ngModel)]="advert.unitOfMeasure"
-                name="unitOfMeasure" placeholder="Navedite trajanje časa u minutama">
+                name="unitOfMeasure"
+                oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
+                placeholder="Navedite trajanje časa u minutama">
             </div>
             <div class="form-group">
               <label for="phone">Telefon:</label>
               <input type="text" class="form-control" id="phone" required [(ngModel)]="advert.phone" name="phone"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
-                placeholder="065555555">
+                placeholder="065321321">
             </div>
             <div class="form-group">
               <label for="id_user">Select course</label>
